<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_frame_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.acistek.cls.ProfileActivity">

    <LinearLayout
        android:id="@+id/profile_layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:orientation="vertical"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ListView
                        android:id="@+id/profile_listview"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:choiceMode="singleChoice"
                        android:dividerHeight="1dp"
                        android:divider="#C8C7CC"
                        android:fadeScrollbars="true"/>

                    <TextView
                        android:id="@+id/profile_err"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/profile_error"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:visibility="gone"/>

                    <ProgressBar android:id="@+id/progressprofile"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleLarge"
                        android:visibility="gone"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:gravity="bottom">

                <LinearLayout
                    android:id="@+id/profile_fav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/search_top_border"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:onClick="goFav">
                    <ImageView
                        android:id="@+id/profile_fav_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile_fav"/>
                    <TextView
                        android:id="@+id/profile_fav_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".60"
                        android:layout_marginBottom="5dp"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:textColor="#336A90"
                        android:textAllCaps="false"
                        android:text="@string/profile_fav"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/search_top_border"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:onClick="goCall">
                    <ImageView
                        android:id="@+id/profile_call_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile_call"/>
                    <TextView
                        android:id="@+id/profile_call_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".60"
                        android:layout_marginBottom="5dp"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:textColor="#336A90"
                        android:textAllCaps="false"
                        android:text="@string/profile_call"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/search_top_border"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:onClick="goText">
                    <ImageView
                        android:id="@+id/profile_text_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile_text"/>
                    <TextView
                        android:id="@+id/profile_text_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".60"
                        android:layout_marginBottom="5dp"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:textColor="#336A90"
                        android:textAllCaps="false"
                        android:text="@string/profile_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/search_top_border"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:onClick="goEmail">
                    <ImageView
                        android:id="@+id/profile_email_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile_mail"/>
                    <TextView
                        android:id="@+id/profile_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".60"
                        android:layout_marginBottom="5dp"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:textColor="#336A90"
                        android:textAllCaps="false"
                        android:text="@string/profile_email"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_maps"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/search_top_border"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:onClick="goMap">
                    <ImageView
                        android:id="@+id/profile_maps_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile_map"/>
                    <TextView
                        android:id="@+id/profile_maps_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".60"
                        android:layout_marginBottom="5dp"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:textColor="#336A90"
                        android:textAllCaps="false"
                        android:text="@string/profile_map"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical"
            android:gravity="top">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:weightSum="100"
            android:orientation="vertical"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="85"
                android:layout_gravity="center"
                android:background="#336A90"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:layout_weight=".1"
                    android:onClick="closeGroupList">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/profile_grouplist_cancel"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:paddingLeft="15dp"
                        android:gravity="left|center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight=".1">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:layout_weight=".1"
                    android:onClick="selectGroupList">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/profile_grouplist_done"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:gravity="right|center_vertical"
                        android:paddingRight="15dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="15"
                android:background="#FFFFFF">

                <ListView
                    android:id="@+id/profile_select_grouplist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    android:fadeScrollbars="true" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
